parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    NEWLINE
    LINE_COMMENT
    FOR
    SHABANG
    RBRACE
    AMPERSAND
    IN
    EQ
    NEQ
    LBRACE

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     instructions -> instruction instructions
Rule 3     instructions -> instruction
Rule 4     instruction -> identifier ASSIGNMENT expression
Rule 5     instruction -> identifier ASSIGNMENT double_paren_dollar_prefix_expression
Rule 6     instruction -> IF condition SEMICOLON THEN instructions SEMICOLON FI
Rule 7     instruction -> IF condition SEMICOLON THEN instructions SEMICOLON ELSE instructions SEMICOLON FI
Rule 8     instruction -> WHILE condition SEMICOLON DO instructions DONE
Rule 9     instruction -> ECHO expression
Rule 10    instruction -> BREAK
Rule 11    instruction -> CONTINUE
Rule 12    double_paren_dollar_prefix_expression -> DOLLAR DOUBLE_LPAREN expression DOUBLE_RPAREN
Rule 13    instruction -> DOUBLE_LPAREN expression DOUBLE_RPAREN
Rule 14    identifier -> IDENTIFIER
Rule 15    comparators -> TEST_EQ
Rule 16    comparators -> TEST_NEQ
Rule 17    comparators -> TEST_LT
Rule 18    comparators -> TEST_GT
Rule 19    comparators -> EQUALS
Rule 20    comparators -> GT
Rule 21    comparators -> GTE
Rule 22    comparators -> LT
Rule 23    comparators -> LTE
Rule 24    condition -> expression
Rule 25    condition -> DOUBLE_LBRACKET expression DOUBLE_RBRACKET
Rule 26    condition -> LBRACKET expression RBRACKET
Rule 27    expression -> identifier
Rule 28    expression -> identifier DECREMENT
Rule 29    expression -> identifier INCREMENT
Rule 30    expression -> const
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression TIMES expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> expression comparators expression
Rule 36    expression -> LPAREN expression RPAREN
Rule 37    const -> NUMBER
Rule 38    const -> STRING
Rule 39    const -> VARIABLE
Rule 40    const -> BOOLEAN
Rule 41    instruction -> command switch_list argument_list
Rule 42    instruction -> command argument_list
Rule 43    instruction -> command switch_list
Rule 44    instruction -> command
Rule 45    command -> identifier
Rule 46    switch -> MINUS identifier
Rule 47    switch_list -> switch switch_list
Rule 48    switch_list -> switch
Rule 49    argument -> const
Rule 50    argument_list -> argument argument_list
Rule 51    argument_list -> argument

Terminals, with rules where they appear

AMPERSAND            : 
ASSIGNMENT           : 4 5
BOOLEAN              : 40
BREAK                : 10
CHAR                 : 
CONTINUE             : 11
DECREMENT            : 28
DIVIDE               : 34
DO                   : 8
DOLLAR               : 12
DONE                 : 8
DOUBLE_LBRACKET      : 25
DOUBLE_LPAREN        : 12 13
DOUBLE_RBRACKET      : 25
DOUBLE_RPAREN        : 12 13
ECHO                 : 9
ELSE                 : 7
EQ                   : 
EQUALS               : 19
FI                   : 6 7
FOR                  : 
GT                   : 20
GTE                  : 21
IDENTIFIER           : 14
IF                   : 6 7
IN                   : 
INCREMENT            : 29
LBRACE               : 
LBRACKET             : 26
LINE_COMMENT         : 
LPAREN               : 36
LT                   : 22
LTE                  : 23
MINUS                : 32 46
NEQ                  : 
NEWLINE              : 
NUMBER               : 37
PLUS                 : 31
RBRACE               : 
RBRACKET             : 26
RPAREN               : 36
SEMICOLON            : 6 6 7 7 7 8
SHABANG              : 
STRING               : 38
TEST_EQ              : 15
TEST_GT              : 18
TEST_LT              : 17
TEST_NEQ             : 16
THEN                 : 6 7
TIMES                : 33
VARIABLE             : 39
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

argument             : 50 51
argument_list        : 41 42 50
command              : 41 42 43 44
comparators          : 35
condition            : 6 7 8
const                : 30 49
double_paren_dollar_prefix_expression : 5
expression           : 4 9 12 13 24 25 26 31 31 32 32 33 33 34 34 35 35 36
identifier           : 4 5 27 28 29 45 46
instruction          : 2 3
instructions         : 1 2 6 7 7 8
program              : 0
switch               : 47 48
switch_list          : 41 43 47

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) instructions -> . instruction instructions
    (3) instructions -> . instruction
    (4) instruction -> . identifier ASSIGNMENT expression
    (5) instruction -> . identifier ASSIGNMENT double_paren_dollar_prefix_expression
    (6) instruction -> . IF condition SEMICOLON THEN instructions SEMICOLON FI
    (7) instruction -> . IF condition SEMICOLON THEN instructions SEMICOLON ELSE instructions SEMICOLON FI
    (8) instruction -> . WHILE condition SEMICOLON DO instructions DONE
    (9) instruction -> . ECHO expression
    (10) instruction -> . BREAK
    (11) instruction -> . CONTINUE
    (13) instruction -> . DOUBLE_LPAREN expression DOUBLE_RPAREN
    (41) instruction -> . command switch_list argument_list
    (42) instruction -> . command argument_list
    (43) instruction -> . command switch_list
    (44) instruction -> . command
    (14) identifier -> . IDENTIFIER
    (45) command -> . identifier

    IF              shift and go to state 6
    WHILE           shift and go to state 1
    ECHO            shift and go to state 5
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    DOUBLE_LPAREN   shift and go to state 2
    IDENTIFIER      shift and go to state 7

    instruction                    shift and go to state 8
    program                        shift and go to state 3
    command                        shift and go to state 11
    identifier                     shift and go to state 12
    instructions                   shift and go to state 4

state 1

    (8) instruction -> WHILE . condition SEMICOLON DO instructions DONE
    (24) condition -> . expression
    (25) condition -> . DOUBLE_LBRACKET expression DOUBLE_RBRACKET
    (26) condition -> . LBRACKET expression RBRACKET
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    DOUBLE_LBRACKET shift and go to state 17
    LBRACKET        shift and go to state 14
    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    expression                     shift and go to state 23
    identifier                     shift and go to state 22
    condition                      shift and go to state 20

state 2

    (13) instruction -> DOUBLE_LPAREN . expression DOUBLE_RPAREN
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    identifier                     shift and go to state 22
    expression                     shift and go to state 24

state 3

    (0) S' -> program .



state 4

    (1) program -> instructions .

    $end            reduce using rule 1 (program -> instructions .)


state 5

    (9) instruction -> ECHO . expression
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    identifier                     shift and go to state 22
    expression                     shift and go to state 25

state 6

    (6) instruction -> IF . condition SEMICOLON THEN instructions SEMICOLON FI
    (7) instruction -> IF . condition SEMICOLON THEN instructions SEMICOLON ELSE instructions SEMICOLON FI
    (24) condition -> . expression
    (25) condition -> . DOUBLE_LBRACKET expression DOUBLE_RBRACKET
    (26) condition -> . LBRACKET expression RBRACKET
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    DOUBLE_LBRACKET shift and go to state 17
    LBRACKET        shift and go to state 14
    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    expression                     shift and go to state 23
    identifier                     shift and go to state 22
    condition                      shift and go to state 26

state 7

    (14) identifier -> IDENTIFIER .

    ASSIGNMENT      reduce using rule 14 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 14 (identifier -> IDENTIFIER .)
    NUMBER          reduce using rule 14 (identifier -> IDENTIFIER .)
    STRING          reduce using rule 14 (identifier -> IDENTIFIER .)
    VARIABLE        reduce using rule 14 (identifier -> IDENTIFIER .)
    BOOLEAN         reduce using rule 14 (identifier -> IDENTIFIER .)
    IF              reduce using rule 14 (identifier -> IDENTIFIER .)
    WHILE           reduce using rule 14 (identifier -> IDENTIFIER .)
    ECHO            reduce using rule 14 (identifier -> IDENTIFIER .)
    BREAK           reduce using rule 14 (identifier -> IDENTIFIER .)
    CONTINUE        reduce using rule 14 (identifier -> IDENTIFIER .)
    DOUBLE_LPAREN   reduce using rule 14 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 14 (identifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 14 (identifier -> IDENTIFIER .)
    DECREMENT       reduce using rule 14 (identifier -> IDENTIFIER .)
    INCREMENT       reduce using rule 14 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 14 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 14 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 14 (identifier -> IDENTIFIER .)
    TEST_EQ         reduce using rule 14 (identifier -> IDENTIFIER .)
    TEST_NEQ        reduce using rule 14 (identifier -> IDENTIFIER .)
    TEST_LT         reduce using rule 14 (identifier -> IDENTIFIER .)
    TEST_GT         reduce using rule 14 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 14 (identifier -> IDENTIFIER .)
    GT              reduce using rule 14 (identifier -> IDENTIFIER .)
    GTE             reduce using rule 14 (identifier -> IDENTIFIER .)
    LT              reduce using rule 14 (identifier -> IDENTIFIER .)
    LTE             reduce using rule 14 (identifier -> IDENTIFIER .)
    $end            reduce using rule 14 (identifier -> IDENTIFIER .)
    DONE            reduce using rule 14 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 14 (identifier -> IDENTIFIER .)
    RBRACKET        reduce using rule 14 (identifier -> IDENTIFIER .)
    DOUBLE_RPAREN   reduce using rule 14 (identifier -> IDENTIFIER .)
    DOUBLE_RBRACKET reduce using rule 14 (identifier -> IDENTIFIER .)


state 8

    (2) instructions -> instruction . instructions
    (3) instructions -> instruction .
    (2) instructions -> . instruction instructions
    (3) instructions -> . instruction
    (4) instruction -> . identifier ASSIGNMENT expression
    (5) instruction -> . identifier ASSIGNMENT double_paren_dollar_prefix_expression
    (6) instruction -> . IF condition SEMICOLON THEN instructions SEMICOLON FI
    (7) instruction -> . IF condition SEMICOLON THEN instructions SEMICOLON ELSE instructions SEMICOLON FI
    (8) instruction -> . WHILE condition SEMICOLON DO instructions DONE
    (9) instruction -> . ECHO expression
    (10) instruction -> . BREAK
    (11) instruction -> . CONTINUE
    (13) instruction -> . DOUBLE_LPAREN expression DOUBLE_RPAREN
    (41) instruction -> . command switch_list argument_list
    (42) instruction -> . command argument_list
    (43) instruction -> . command switch_list
    (44) instruction -> . command
    (14) identifier -> . IDENTIFIER
    (45) command -> . identifier

    DONE            reduce using rule 3 (instructions -> instruction .)
    SEMICOLON       reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)
    IF              shift and go to state 6
    WHILE           shift and go to state 1
    ECHO            shift and go to state 5
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    DOUBLE_LPAREN   shift and go to state 2
    IDENTIFIER      shift and go to state 7

    instruction                    shift and go to state 8
    command                        shift and go to state 11
    identifier                     shift and go to state 12
    instructions                   shift and go to state 27

state 9

    (10) instruction -> BREAK .

    IF              reduce using rule 10 (instruction -> BREAK .)
    WHILE           reduce using rule 10 (instruction -> BREAK .)
    ECHO            reduce using rule 10 (instruction -> BREAK .)
    BREAK           reduce using rule 10 (instruction -> BREAK .)
    CONTINUE        reduce using rule 10 (instruction -> BREAK .)
    DOUBLE_LPAREN   reduce using rule 10 (instruction -> BREAK .)
    IDENTIFIER      reduce using rule 10 (instruction -> BREAK .)
    $end            reduce using rule 10 (instruction -> BREAK .)
    SEMICOLON       reduce using rule 10 (instruction -> BREAK .)
    DONE            reduce using rule 10 (instruction -> BREAK .)


state 10

    (11) instruction -> CONTINUE .

    IF              reduce using rule 11 (instruction -> CONTINUE .)
    WHILE           reduce using rule 11 (instruction -> CONTINUE .)
    ECHO            reduce using rule 11 (instruction -> CONTINUE .)
    BREAK           reduce using rule 11 (instruction -> CONTINUE .)
    CONTINUE        reduce using rule 11 (instruction -> CONTINUE .)
    DOUBLE_LPAREN   reduce using rule 11 (instruction -> CONTINUE .)
    IDENTIFIER      reduce using rule 11 (instruction -> CONTINUE .)
    $end            reduce using rule 11 (instruction -> CONTINUE .)
    SEMICOLON       reduce using rule 11 (instruction -> CONTINUE .)
    DONE            reduce using rule 11 (instruction -> CONTINUE .)


state 11

    (41) instruction -> command . switch_list argument_list
    (42) instruction -> command . argument_list
    (43) instruction -> command . switch_list
    (44) instruction -> command .
    (47) switch_list -> . switch switch_list
    (48) switch_list -> . switch
    (50) argument_list -> . argument argument_list
    (51) argument_list -> . argument
    (46) switch -> . MINUS identifier
    (49) argument -> . const
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    IF              reduce using rule 44 (instruction -> command .)
    WHILE           reduce using rule 44 (instruction -> command .)
    ECHO            reduce using rule 44 (instruction -> command .)
    BREAK           reduce using rule 44 (instruction -> command .)
    CONTINUE        reduce using rule 44 (instruction -> command .)
    DOUBLE_LPAREN   reduce using rule 44 (instruction -> command .)
    IDENTIFIER      reduce using rule 44 (instruction -> command .)
    $end            reduce using rule 44 (instruction -> command .)
    SEMICOLON       reduce using rule 44 (instruction -> command .)
    DONE            reduce using rule 44 (instruction -> command .)
    MINUS           shift and go to state 33
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 28
    argument                       shift and go to state 29
    switch                         shift and go to state 30
    argument_list                  shift and go to state 31
    switch_list                    shift and go to state 32

state 12

    (4) instruction -> identifier . ASSIGNMENT expression
    (5) instruction -> identifier . ASSIGNMENT double_paren_dollar_prefix_expression
    (45) command -> identifier .

    ASSIGNMENT      shift and go to state 34
    MINUS           reduce using rule 45 (command -> identifier .)
    NUMBER          reduce using rule 45 (command -> identifier .)
    STRING          reduce using rule 45 (command -> identifier .)
    VARIABLE        reduce using rule 45 (command -> identifier .)
    BOOLEAN         reduce using rule 45 (command -> identifier .)
    IF              reduce using rule 45 (command -> identifier .)
    WHILE           reduce using rule 45 (command -> identifier .)
    ECHO            reduce using rule 45 (command -> identifier .)
    BREAK           reduce using rule 45 (command -> identifier .)
    CONTINUE        reduce using rule 45 (command -> identifier .)
    DOUBLE_LPAREN   reduce using rule 45 (command -> identifier .)
    IDENTIFIER      reduce using rule 45 (command -> identifier .)
    SEMICOLON       reduce using rule 45 (command -> identifier .)
    $end            reduce using rule 45 (command -> identifier .)
    DONE            reduce using rule 45 (command -> identifier .)


state 13

    (37) const -> NUMBER .

    PLUS            reduce using rule 37 (const -> NUMBER .)
    MINUS           reduce using rule 37 (const -> NUMBER .)
    TIMES           reduce using rule 37 (const -> NUMBER .)
    DIVIDE          reduce using rule 37 (const -> NUMBER .)
    TEST_EQ         reduce using rule 37 (const -> NUMBER .)
    TEST_NEQ        reduce using rule 37 (const -> NUMBER .)
    TEST_LT         reduce using rule 37 (const -> NUMBER .)
    TEST_GT         reduce using rule 37 (const -> NUMBER .)
    EQUALS          reduce using rule 37 (const -> NUMBER .)
    GT              reduce using rule 37 (const -> NUMBER .)
    GTE             reduce using rule 37 (const -> NUMBER .)
    LT              reduce using rule 37 (const -> NUMBER .)
    LTE             reduce using rule 37 (const -> NUMBER .)
    IF              reduce using rule 37 (const -> NUMBER .)
    WHILE           reduce using rule 37 (const -> NUMBER .)
    ECHO            reduce using rule 37 (const -> NUMBER .)
    BREAK           reduce using rule 37 (const -> NUMBER .)
    CONTINUE        reduce using rule 37 (const -> NUMBER .)
    DOUBLE_LPAREN   reduce using rule 37 (const -> NUMBER .)
    IDENTIFIER      reduce using rule 37 (const -> NUMBER .)
    $end            reduce using rule 37 (const -> NUMBER .)
    DONE            reduce using rule 37 (const -> NUMBER .)
    SEMICOLON       reduce using rule 37 (const -> NUMBER .)
    DOUBLE_RBRACKET reduce using rule 37 (const -> NUMBER .)
    DOUBLE_RPAREN   reduce using rule 37 (const -> NUMBER .)
    RBRACKET        reduce using rule 37 (const -> NUMBER .)
    RPAREN          reduce using rule 37 (const -> NUMBER .)
    NUMBER          reduce using rule 37 (const -> NUMBER .)
    STRING          reduce using rule 37 (const -> NUMBER .)
    VARIABLE        reduce using rule 37 (const -> NUMBER .)
    BOOLEAN         reduce using rule 37 (const -> NUMBER .)


state 14

    (26) condition -> LBRACKET . expression RBRACKET
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    identifier                     shift and go to state 22
    expression                     shift and go to state 35

state 15

    (38) const -> STRING .

    PLUS            reduce using rule 38 (const -> STRING .)
    MINUS           reduce using rule 38 (const -> STRING .)
    TIMES           reduce using rule 38 (const -> STRING .)
    DIVIDE          reduce using rule 38 (const -> STRING .)
    TEST_EQ         reduce using rule 38 (const -> STRING .)
    TEST_NEQ        reduce using rule 38 (const -> STRING .)
    TEST_LT         reduce using rule 38 (const -> STRING .)
    TEST_GT         reduce using rule 38 (const -> STRING .)
    EQUALS          reduce using rule 38 (const -> STRING .)
    GT              reduce using rule 38 (const -> STRING .)
    GTE             reduce using rule 38 (const -> STRING .)
    LT              reduce using rule 38 (const -> STRING .)
    LTE             reduce using rule 38 (const -> STRING .)
    IF              reduce using rule 38 (const -> STRING .)
    WHILE           reduce using rule 38 (const -> STRING .)
    ECHO            reduce using rule 38 (const -> STRING .)
    BREAK           reduce using rule 38 (const -> STRING .)
    CONTINUE        reduce using rule 38 (const -> STRING .)
    DOUBLE_LPAREN   reduce using rule 38 (const -> STRING .)
    IDENTIFIER      reduce using rule 38 (const -> STRING .)
    $end            reduce using rule 38 (const -> STRING .)
    DONE            reduce using rule 38 (const -> STRING .)
    SEMICOLON       reduce using rule 38 (const -> STRING .)
    DOUBLE_RBRACKET reduce using rule 38 (const -> STRING .)
    DOUBLE_RPAREN   reduce using rule 38 (const -> STRING .)
    RBRACKET        reduce using rule 38 (const -> STRING .)
    RPAREN          reduce using rule 38 (const -> STRING .)
    NUMBER          reduce using rule 38 (const -> STRING .)
    STRING          reduce using rule 38 (const -> STRING .)
    VARIABLE        reduce using rule 38 (const -> STRING .)
    BOOLEAN         reduce using rule 38 (const -> STRING .)


state 16

    (30) expression -> const .

    PLUS            reduce using rule 30 (expression -> const .)
    MINUS           reduce using rule 30 (expression -> const .)
    TIMES           reduce using rule 30 (expression -> const .)
    DIVIDE          reduce using rule 30 (expression -> const .)
    TEST_EQ         reduce using rule 30 (expression -> const .)
    TEST_NEQ        reduce using rule 30 (expression -> const .)
    TEST_LT         reduce using rule 30 (expression -> const .)
    TEST_GT         reduce using rule 30 (expression -> const .)
    EQUALS          reduce using rule 30 (expression -> const .)
    GT              reduce using rule 30 (expression -> const .)
    GTE             reduce using rule 30 (expression -> const .)
    LT              reduce using rule 30 (expression -> const .)
    LTE             reduce using rule 30 (expression -> const .)
    SEMICOLON       reduce using rule 30 (expression -> const .)
    DOUBLE_RPAREN   reduce using rule 30 (expression -> const .)
    IF              reduce using rule 30 (expression -> const .)
    WHILE           reduce using rule 30 (expression -> const .)
    ECHO            reduce using rule 30 (expression -> const .)
    BREAK           reduce using rule 30 (expression -> const .)
    CONTINUE        reduce using rule 30 (expression -> const .)
    DOUBLE_LPAREN   reduce using rule 30 (expression -> const .)
    IDENTIFIER      reduce using rule 30 (expression -> const .)
    $end            reduce using rule 30 (expression -> const .)
    DONE            reduce using rule 30 (expression -> const .)
    RBRACKET        reduce using rule 30 (expression -> const .)
    DOUBLE_RBRACKET reduce using rule 30 (expression -> const .)
    RPAREN          reduce using rule 30 (expression -> const .)


state 17

    (25) condition -> DOUBLE_LBRACKET . expression DOUBLE_RBRACKET
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    identifier                     shift and go to state 22
    expression                     shift and go to state 36

state 18

    (36) expression -> LPAREN . expression RPAREN
    (27) expression -> . identifier
    (28) expression -> . identifier DECREMENT
    (29) expression -> . identifier INCREMENT
    (30) expression -> . const
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression TIMES expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . expression comparators expression
    (36) expression -> . LPAREN expression RPAREN
    (14) identifier -> . IDENTIFIER
    (37) const -> . NUMBER
    (38) const -> . STRING
    (39) const -> . VARIABLE
    (40) const -> . BOOLEAN

    LPAREN          shift and go to state 18
    IDENTIFIER      shift and go to state 7
    NUMBER          shift and go to state 13
    STRING          shift and go to state 15
    VARIABLE        shift and go to state 19
    BOOLEAN         shift and go to state 21

    const                          shift and go to state 16
    identifier                     shift and go to state 22
    expression                     shift and go to state 37

state 19

    (39) const -> VARIABLE .
